clusters/infrastructure/prod/app/irc/ngircd-values.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ngircd
  labels:
    goldilocks.fairwinds.com/enabled: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngircd
  namespace: ngircd
  labels:
    app: ngircd
spec:
  replicas: 1
  template:
    metadata:
      name: ngircd
      labels:
        app: ngircd
    spec:
      containers:
        - name: ngircd
          image: lscr.io/linuxserver/ngircd:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /config/ngircd.conf
              subPath: ngircd.conf
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: ngircd-config
            defaultMode: 0755
      restartPolicy: Always
  selector:
    matchLabels:
      app: ngircd
---
apiVersion: v1
kind: Service
metadata:
  name: ngircd
  namespace: ngircd
spec:
  selector:
    app: ngircd
  ports:
    - port: 6667
      targetPort: 6667
      protocol: TCP
