clusters/infrastructure/prod/app/irc/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ngircd
  namespace: irc
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`irc.${CLUSTER_DOMAIN}`)
      services:
        - name: ngircd
          port: 6667
      middlewares:
        - name: 'crowdsec-bouncer-appsec'
          namespace: 'traefik'
  tls:
    certResolver: myresolver
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thelounge
  namespace: irc
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "thelounge"
    gethomepage.dev/description: "Welcome to The Lounge, a web-based IRC client for the modern world! ❤️"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "si-theconversation.svg"
    gethomepage.dev/pod-selector: "app=thelounge"
    gethomepage.dev/href: "https://thelounge.${CLUSTER_DOMAIN}"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`thelounge.${CLUSTER_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: 'crowdsec-bouncer-appsec'
          namespace: 'traefik'
      services:
        - name: thelounge
          port: 10061
